--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -2,7 +2,7 @@
 id: crowdspot
 hide_title: true
 sidebar_label: Crowdspot
-slug: /use-the-network/crowdspot
+slug: /mine-hnt/crowdspot
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
