formatting fixes and updated Trust Score explainer

--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -33,13 +33,13 @@ There are 0 fees to connect a Helium Wallet address to Crowdspot.
 
 ## How to Submit to the Denylist
 
-To submit Hotspots for Denylist consideration, start by clicking on the "Submit Denylist Request"
+To submit Hotspots for Denylist consideration, start by clicking on the `Submit Denylist Request`
 button on the Crowdspot.io landing page.
 
 Once in the Submission form, users will be given the option to select the type of submission:
 
-- Submit additions to the Denylist
-- Request removals from the Denylist
+- Submit Additions to the Denylist
+- Request Removals from the Denylist
 
 ### Submit an Addition
 
@@ -47,17 +47,17 @@ Once in the Submission form, users will be given the option to select the type o
 
 #### Submission Type
 
-On the Submission form, select the "Addition" radio button under "Submission Type."
+On the Submission form, select the `Addition` radio button under `Submission Type.`
 
 #### Enter Hotspot Address
 
-Copy and paste the `b58` address of the Hotspot into the "Enter Hotspot b58 Address" field. The
+Copy and paste the `b58` address of the Hotspot into the `Enter Hotspot b58 Address` field. The
 `b58` address for a Hotspot is the 52-character address of the Hotspot **NOT THE ANIMAL NAME**. The
-`b58` address for a given hotspot is the end of the URL for the Hotspot on the Helium Explorer or
-the value next to "Address" on the Hotspot's page on Crowdspot.
+`b58` address for a given Hotspot is the end of the URL for the Hotspot on the Helium Explorer or
+the value next to `Address` on the Hotspot's page on Crowdspot.
 
-Multiple Hotspots can be added as part of a single Denylist submission by clicking the "+" button
-and inserting more Hotspot `b58` addresses.
+Multiple Hotspots can be added as part of a single Denylist submission by clicking the `+` button
+and inputting more Hotspot `b58` addresses.
 
 #### Reporting Clusters
 
@@ -65,9 +65,9 @@ Some Abnormal Hotspots are part of a "Cluster," a group of Hotspots that only wi
 Clusters are often asserted in a roughly circular formation and may be nestled among Legitimate
 Hotspots.
 
-When reporting a Cluster of Hotspots, include all `b58` addresses **and** toggle on the "Is this a
-cluster of Hotspots" checkbox. This information assists in evaluating the legitimacy of the Hotspots
-in the request.
+When reporting a Cluster of Hotspots, include all `b58` addresses **and** toggle on the
+`Is this a cluster of Hotspots` checkbox. This information assists in evaluating the legitimacy of
+the Hotspots in the request.
 
 #### Written Reasoning
 
@@ -76,7 +76,7 @@ valuable insight for evaluation.
 
 #### Create the Submittion
 
-Once you have added all the required and optional information, click the "Create Submission" button.
+Once you have added all the required and optional information, click the `Create Submission` button.
 
 :::note Submission Status
 
@@ -90,20 +90,20 @@ You can view the status of your submission on the
 ### Submit a Removal Request
 
 In an ideal world, Legitimate Hotspots are appropriately screened and not added to the Denylist.
-Still, when this _does_ happen, Hotspot Owners can potentially submit information and evidence to
+Still, when this _does_ happen, Hotspot Owners can submit information and evidence to _potentially_
 have a Hotspot removed from the Denylist.
 
 <img className="homeicon" src={useBaseUrl('img/crowdspot/report-removal.png')} />
 
 #### Submission Type
 
-On the Submission form, select the `Removal` Radio button under Submission Type.
+On the Submission form, select the `Removal` radio button under Submission Type.
 
 #### Visual Evidence
 
 Denylist Removal submissions can optionally include visual evidence, such as screenshots or other
-images, to support the removal claim. **At this time, visual evidence can be submitted as a URL.**
-There is a limit of 3 URLs per submission.
+images, to support the removal claim. **At this time, visual evidence can be submitted as a URL**
+with a limit of 3 URLs per submission.
 
 - For multiple images, we recommend using a cloud image storage platform, such as
   [Google Photos](https://photos.google.com/) or [Flikr](https://www.flickr.com/). Upload your
@@ -118,7 +118,7 @@ valuable insight for evaluation.
 
 #### Create the Submittion
 
-Once you have added all the required and optional information, click the "Create Submission" button.
+Once you have added all the required and optional information, click the `Create Submission` button.
 
 :::note Submission Status
 
@@ -139,7 +139,7 @@ the submission of large Clusters. To make the process easier for extensive submi
 
 #### Entering a Batch of Hotspot Addresses
 
-To submit multiple Hotspots, Click the "Submit a Batch" link, and the individual address entry field
+To submit multiple Hotspots, Click the `Submit a Batch` link, and the individual address entry field
 will be replaced with a text box.
 
 :::caution Formatting is essential!
@@ -205,7 +205,7 @@ See the section below on how to
 
 ## Log In with the Helium Wallet App
 
-To associate a Helium Wallet address, click the "Login" menu bar item on the Crowdspot homepage and
+To associate a Helium Wallet address, click the `Login` menu bar item on the Crowdspot homepage and
 scan the QR code with your phone.
 
 <img className="appscreenbanner" src={useBaseUrl('img/crowdspot/login-popover.png')} />
@@ -253,7 +253,7 @@ Crowdspot.
 If you are already logged in, you will see a Profile Badge and a portion of the connected wallet
 address. The Profile badge will match in the Helium Wallet app and on Crowdspot.
 
-Otherwise, if no account is logged in, no Profile Badge is visible, and the "Login" menu bar item is
+Otherwise, if no account is logged in, no Profile Badge is visible, and the `Login` menu bar item is
 shown.
 
 :::note Login Status Indication
@@ -276,7 +276,7 @@ shown.
 ### How to Log Out
 
 You can Log out of Crowdspot by clicking your profile badge in the upper right corner and selecting
-"Log Me Out" from the pop-up menu.
+`Log Me Out` from the pop-up menu.
 
 <img className="appscreenbanner" src={useBaseUrl('img/crowdspot/logout-popover.png')} />
 
@@ -367,7 +367,7 @@ will be displayed in the same color.
       <img className="homeicon" src={useBaseUrl('img/crowdspot/witness-graph-legit-example.png')} />
       <p>
         The central Hotspot's witnesses vary with placement and the natural terrain of the area.
-        These witness connections are more random and feature a wider variety of hotspot owners.
+        These witness connections are more random and feature a wider variety of Hotspot owners.
       </p>
     </div>
     <div class="col col--6" style={{ marginBottom: 0 }}>
@@ -376,7 +376,7 @@ will be displayed in the same color.
       <p>
         The central Hotspot can only see a specific subset of Hotspots. This is illustrated by a
         sphere-like containment of Hotspots witnessing only each other, but failing to connect
-        outside the containment. There may be less variation of hotspot owners in an abnormal
+        outside the containment. There may be less variation of Hotspot owners in an abnormal
         cluster.
       </p>
     </div>
@@ -452,20 +452,16 @@ This state indicates that the submission request has been declined.
 
 ### Trust Score
 
+Crowdspot will leverage algorithms to increase efficiency and accurately detect gaming Hotspots.
+Trust Scores will be assigned to every submitted Hotspot to assist in the evaluation.
+
 A Trust Score is a score assigned to Hotspot based on a combination of metrics found on
 [Crowdspot.io](http://crowdspot.io/). These metrics are primarily graph data and include the Hotspot
 Witness graph, the Witness SNR vs. RSSI graph, and the Witness RSSI vs. Distance graph.
 
-The Trust Score Algorithm compares these metrics to a sample of known spoofers from the Denylist and
-a sample of known legitimate Hotspots.
-
-Crowdspot will leverage algorithms to increase efficiency and accurately detect gaming Hotspots.
-Trust Scores will be assigned to every submitted Hotspot to assist in the evaluation. A Trust Score
-is a score assigned to Hotspot based on a combination of metrics found on Crowdspot.io. These
-metrics are primarily graph data and include the Hotspot Witness graph, the Witness SNR vs. RSSI
-graph, and the Witness RSSI vs. Distance graph. The Trust Score compares these graph metrics to a
-sample of known gaming Hotspots from the Denylist, as well as a model of known legitimate Hotspots,
-to determine the relative legitimacy of the Hotspot.
+The Trust Score compares these graph metrics to a sample of known gaming Hotspots from the Denylist,
+as well as a sample of known legitimate Hotspots, to determine the relative legitimacy of the
+Hotspot.
 
 ---
 
