--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -15,7 +15,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Crowdspot is an unmonitored, self-service tool built by Nova Labs for the community. This tool
 allows anyone to explore Helium Network Hotspot data to understand atypical Hotspot behavior and
-identity anomalies.
+identify anomalies.
 
 Similar to Voting, submitting Denylist additions, removals requests, or casting a vote on the status
 of a Hotspot requires a Crowdspot account associated with a unique Helium Wallet address.
