--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -163,6 +163,15 @@ You can view the status of your submission on the
 
 ### Submit a Removal Request
 
+:::caution Security
+
+For security reasons, text and visual evidence will only be accessible to Denylist maintainers.
+
+Although you cannot view this evidence when you click on a submission, we assure you that it can be
+seen and is being evaluated.
+
+:::
+
 In an ideal world, Legitimate Hotspots are appropriately screened and not added to the Denylist.
 Still, when this _does_ happen, Hotspot Owners can submit information and evidence to _potentially_
 have a Hotspot removed from the Denylist.
